Adding ci build status to gerrit header
- This new status menus will be shown right next to the
  code-review status box.

Change-Id: I5f1d28d6efc7864c603051408144f438f7e8991b

--- a/puppet/modules/runtime_project/files/gerrit/usg-cla.html
+++ b/puppet/modules/runtime_project/files/gerrit/usg-cla.html
@@ -8,8 +8,9 @@ OpenStack Project U.S. Government Contributor License Agreement
 This agreement is not managed through Gerrit. If you need to sign the U.S.
 Government Contributor License Agreement, please contact the OpenStack
 Foundation to initiate the process. See <a
-href="https://wiki.openstack.org/wiki/HowToContribute">https://wiki.openstack.org/wiki/HowToContribute</a>
-for more information.
+href="http://docs.openstack.org/infra/manual/developers.html#account-setup">the
+account setup instructions</a> for more information on OpenStack Contributor
+License Agreements.
 </p>
 
 </div></body></html>
