--- a/puppet/modules/runtime_project/files/gerrit/system-cla.html
+++ b/puppet/modules/runtime_project/files/gerrit/system-cla.html
@@ -6,8 +6,9 @@ Gerrit System Role Accounts Proxy CLA
 
 <p>
 This is not a real CLA and cannot be signed. See <a
-href="https://wiki.openstack.org/wiki/HowToContribute">https://wiki.openstack.org/wiki/HowToContribute</a>
-for more information on OpenStack Contributor License Agreements.
+href="http://docs.openstack.org/infra/manual/developers.html#account-setup">the
+account setup instructions</a> for more information on OpenStack Contributor
+License Agreements.
 </p>
 
 </div></body></html>
